# skillpath-ai

./: .gitignore  .replit  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
.agents/memory/: MEMORY.md  mongodb-atlas-replit.md
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: mongodb.py
backend/app/models/: common.py  learning.py  progress.py  user.py
backend/app/routers/: ai.py  analytics.py  auth.py  courses.py  progress.py  skills.py  users.py
backend/app/services/: ai_provider.py  gamification.py
backend/app/utils/: slug.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx  WaypointProgress.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Courses.jsx  Landing.jsx
frontend/src/pages/admin/: AdminDashboard.jsx
frontend/src/pages/auth/: Login.jsx  Register.jsx
frontend/src/pages/instructor/: CreateCourse.jsx  InstructorDashboard.jsx
frontend/src/pages/student/: StudentDashboard.jsx
