[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt==4.0.1",
    "certifi>=2026.6.17",
    "cloudinary==1.40.0",
    "email-validator==2.1.1",
    "fastapi==0.111.0",
    "google-generativeai==0.5.4",
    "motor==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pymongo==4.7.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "qrcode[pil]==7.4.2",
    "reportlab==4.2.0",
    "uvicorn[standard]==0.30.1",
]
